Add some styling fetch all data over all pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rick and Morty API</title>
   </head>
   <body>
-    <h1>Explore the Rick \& Morty Universe</h1>
+    <h1>Explore the Rick and Morty Universe</h1>
 
     <form data-js="search-form" class="Search__form" autocomplete="off">
       <p class="Search__form-ninja">🥷</p>
