--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
       </fieldset>
     </form>
     <ul data-js="search-results" class="Search__results" role="list"></ul>
+    <button class="button__more" data-js="more-button">Show More</button>
   </body>
 </html>
