refactor the code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           type="radio"
           id="liveStatus1"
           name="liveStatus"
-          value="all"
+          value="All"
           checked
         />
         <label for="liveStatus1" class="Filter__label">All</label>
@@ -43,7 +43,7 @@
           type="radio"
           id="liveStatus2"
           name="liveStatus"
-          value="alive"
+          value="Alive"
           class="Filter__radio"
         />
         <label for="liveStatus2" class="Filter__label">Alive</label>
@@ -52,7 +52,7 @@
           type="radio"
           id="liveStatus3"
           name="liveStatus"
-          value="dead"
+          value="Dead"
           class="Filter__radio"
         />
         <label for="liveStatus3" class="Filter__label">Dead</label>
